fix layout issue with page heading

--- a/plugins/themes/journals-resources/styles/custom.less
+++ b/plugins/themes/journals-resources/styles/custom.less
@@ -33,6 +33,7 @@ a {
 
 /* general layout */
 
+h2,
 header,
 .page {
 	margin: 25px auto;
